# Socket-Mailer

./: .gitignore  Was ist bei twmailer zu tun.docx
shared/: exception.cpp  exception.h  socket.cpp  socket.h  validation.cpp  validation.h
twmailer-client/: CMakeLists.txt
twmailer-client/twmailer-client/: CMakeLists.txt  commands.cpp  commands.h  twmailer-client.cpp  twmailer-client.h
twmailer-server/: CMakeLists.txt
twmailer-server/twmailer-server/: CMakeLists.txt  blacklist.cpp  blacklist.h  commands.cpp  commands.h  ldap.cpp  ldap.h  twmailer-server.cpp  twmailer-server.h
